--- a/components/src/components/base/header.astro
+++ b/components/src/components/base/header.astro
@@ -1,6 +1,6 @@
 ---
 const pageTitle:string = "LABOROSO"
-import NavLines from "./NavLines.astro";
+
 import ModalNav from "./ModalNav.astro";
 ---
 <header id="container">
@@ -23,3 +23,18 @@ import ModalNav from "./ModalNav.astro";
     
     
 </header>
+
+<style>
+
+.benefit {
+    display: inline-block;
+    margin: 1rem;
+  }
+  
+  .benefit img {
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+  }
+  
+</style>
