--- a/components/src/components/informacion/benefits.astro
+++ b/components/src/components/informacion/benefits.astro
@@ -16,3 +16,18 @@
       <p>Get support whenever you need it.</p>
     </div>
   </section>
+
+  <style>
+
+.benefit {
+    display: inline-block;
+    margin: 1rem;
+  }
+  
+  .benefit img {
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+  }
+  
+  </style>
