--- a/components/src/components/informacion/next.astro
+++ b/components/src/components/informacion/next.astro
@@ -16,3 +16,109 @@
       <p>10$</p>
     </div>
   </section>
+
+  <style>
+     
+  .next {
+
+ 
+overflow:hidden;
+  margin-bottom: 1rem;
+}
+
+.next .product p {
+  margin-bottom: 1rem;
+  font-size: 2em;
+}
+
+
+.next .product h3 {
+  margin-bottom: 1rem;
+  font-size: 1.5em;
+  color: darkgray;
+}
+
+.next h2 {
+  margin-bottom: 1rem;
+}
+
+.next img {
+  max-width: 100%;
+  width: 20rem;
+  height: 20rem;
+}
+
+.next .text {
+  max-width: 100%;
+
+  /**/
+  float:left; 
+  margin-left:2rem;
+  width: 20rem;
+}
+
+.next .product  {
+  float:right; 
+  margin-right:20px;
+  width: 20rem;
+}
+
+
+
+
+  .next {
+  
+   
+    overflow:hidden;
+      margin-bottom: 1rem;
+  }
+  
+  .next .product {
+    display: inline-block;
+    margin: 1rem;
+  }
+  .next .product p {
+      margin-bottom: 1rem;
+      font-size: 2em;
+  }
+  
+  
+  .next .product h3 {
+      margin-bottom: 1rem;
+      font-size: 1.5em;
+      color: darkgray;
+  }
+  
+  .next h2 {
+      margin-bottom: 1rem;
+    }
+  
+  .next img {
+      max-width: 100%;
+      width: 20rem;
+      height: 20rem;
+  }
+  
+  .next .text {
+      max-width: 100%;
+  
+      /**/
+      float:left; 
+      margin-left:2rem;
+      width: 20rem;
+  }
+  
+  .next .product  {
+      float:right; 
+      margin-right:20px;
+      width: 20rem;
+  }
+
+  .next  .product img {
+    max-width: 100%;
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+  }
+  
+  </style>
