--- a/components/src/components/base/SearchBar.astro
+++ b/components/src/components/base/SearchBar.astro
@@ -1,17 +1,17 @@
 ---
 
 ---
-<div class="container">
+<div class="container-Search-bar">
   <input type="text" placeholder="Search">
   <div class="search"></div>
 </div>
 
 <style>
-  .container {
+  .container-Search-bar {
   position: relative;
     width: 100%;
   height: 100%;
-  /* box-sizing: border-box; */
+  
 }
   .search {
     position: relative;
