--- a/components/src/components/informacion/featuredProducts.astro
+++ b/components/src/components/informacion/featuredProducts.astro
@@ -13,3 +13,27 @@
   
     </div>
   </section>
+
+  <style>
+     .featured-products {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .featured-products .product img {
+    max-width: 100%;
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+  }
+  
+  
+  .featured-products h2 {
+    margin-bottom: 1rem;
+  }
+  
+  .featured-products .product {
+    display: inline-block;
+    margin: 1rem;
+  }
+  </style>
