--- a/components/src/pages/jardineriaFernando.astro
+++ b/components/src/pages/jardineriaFernando.astro
@@ -3,7 +3,7 @@ import ServicioLayout from '../layouts/ServicioLayout.astro';
 import EstrellasCalificacion from '../components/Servicios/EstrellasCalificacion.astro';
 import CalendarioAgenda from '../components/Servicios/CalendarioAgenda.astro';
 import Comentarios from '../components/Servicios/Comentarios.astro';
-const pageTitle = "Trabajos Que Ayudan";
+const pageTitle = "LABOROSO";
 const calificacion = "4.7"
 ---
 <ServicioLayout pageTitle={pageTitle}>
