--- a/components/src/components/MobileNav.astro
+++ b/components/src/components/MobileNav.astro
@@ -104,7 +104,7 @@
     }
     #btn-icon{
         font-weight: bolder;
-        font-size: large;
+        font-size: x-large;
     }
 
     /* Styles for the navigation inside the modal */
@@ -172,8 +172,7 @@
         background-color: #ffffff;
         border-radius: 5%;
     }
-    #closeContainer,
-    button {
+    #closeContainer, button {
         margin: 1em;
     }
 
@@ -186,6 +185,7 @@
 
     .cancelbtn:hover {
         cursor: pointer;
+        /* background-color: #393838; */
     }
 
     /* The Modal (background) */
