menu icon resize

--- a/components/src/components/base/ModalNav.astro
+++ b/components/src/components/base/ModalNav.astro
@@ -112,7 +112,7 @@
     }
     #btn-icon{
         font-weight: bolder;
-        font-size: large;
+        font-size: x-large;
     }
 
     /* Styles for the navigation inside the modal */
@@ -180,8 +180,7 @@
         background-color: #ffffff;
         border-radius: 5%;
     }
-    #closeContainer,
-    button {
+    #closeContainer, button {
         margin: 1em;
     }
 
@@ -194,6 +193,7 @@
 
     .cancelbtn:hover {
         cursor: pointer;
+        /* background-color: #393838; */
     }
 
     /* The Modal (background) */
