--- a/components/src/components/forms/registroTarjeta.astro
+++ b/components/src/components/forms/registroTarjeta.astro
@@ -1,85 +1,179 @@
 ---
 ---
-<div class="container-loginform">
-    <h2>Formulario de Usuarios</h2>
-    <form  method="POST" id="user-form">
-      <div class="form-group">
-        <label for="nombre">Nombre en la Tarjeta:</label>
-        <input type="text" id="nombre" name="nombre" required />
-      </div>
-      <div class="form-group">
-        <label for="telefono">Número de la Tarjeta:</label>
-        <input type="number" id="telefono" name="telefono" pattern="[0-9]{16}" required />
-        <small>Formato: 12345678</small>
-      </div>
-      <div class="form-group">
-        <label for="correo">Fecha Experiación:</label>
-        <input type="date" id="correo" name="correo" required />
-      </div>
-  
-      <div class="form-group">
-        <label for="contrasena">Apodo para la tarjeta:</label>
-        <input type="text" id="contrasena" name="contrasena" />
-      </div>  
-      <div class="form-group">
-        <input type="submit" value="Enviar" />
-      </div>
-    </form>
-   
-  </div>
-  
-  
-  
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+
+<div id="headerContainer">
+    <div>
+        <button
+            onclick="
+            document.getElementById('id011').style.display = 'block'; 
+
+            "
+            id="btn-card"
+            >Registrar Tarjeta
+        </button>
+
+        <div id="id011" style="display: none;" class="modal">
+            <form class="modal-content animate" method="post">
+                <div class="ctn-CardInfo">
+                    <div class="form-group">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" required />
+                      </div>
+                      <div class="form-group">
+                        <label for="apellido">Apellido:</label>
+                        <input type="text" id="apellido" name="apellido" required />
+                      </div>
+                      <div class="form-group">
+                        <label for="telefono">Teléfono:</label>
+                        <input type="tel" id="telefono" name="telefono" pattern="[0-9]{8}" required />
+                        <small>Formato: 12345678</small>
+                      </div>
+                      <div class="form-group">
+                        <label for="correo">Correo electrónico:</label>
+                        <input type="email" id="correo" name="correo" required />
+                      </div>
+                </div>
+
+                <a id="btn-login" > <p>Sign In</p></a>
+                <div class="containerLogin">
+
+
+
+
+
+                </div>
+
+                <div class="container" id="closeContainer">
+                    <button
+                        type="button"
+                        onclick="document.getElementById('id011').style.display = 'none' "
+                        class="cancelbtn">Cancel</button
+                    >
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<style>
+
+    #btn-card {
+        border-radius: 10%;
+        width: auto;
+        
     }
-  
-    .container-loginform {
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      margin-bottom: 1em;
+    /* Full-width input fields */
+    input[type="text"]{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
     }
-  
-    .container-loginform h2 {
-      text-align: center;
+
+    /* Set a style for all buttons
+    using their respective id or class. */
+    #btn-card, .cancelbtn  {
+        background-color: #000000;
+        color: white;
+        padding: 7px 10px 6px 12px;
+        margin: 8px 0 6px 3px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
     }
-  
-    .container-loginform .form-group {
-      margin-bottom: 15px;
+    #btn-card{
+        font-weight: bolder;
+        font-size: x-large;
     }
-  
-    .container-loginform .form-group label {
-      display: block;
-      font-weight: bold;
+
+    /* Styles for the navigation inside the modal */
+    .ctn-CardInfo {
+        text-align: center;
+        margin: 24px 0 12px 0;
+        display: block;
+        max-height: fit-content;
     }
-  
-    .container-loginform .form-group input,
-    .container-loginform .form-group select {
-      width: 100%;
-      padding: 5px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
+
+    /*close btn*/
+    #closeContainer {
+        background-color: #ffffff;
+        border-radius: 5%;
     }
-  
-    .container-loginform .form-group input[type="submit"] {
-      background-color: #000000;
-      color: #ffffff;
-      cursor: pointer;
+    #closeContainer, button {
+        margin: 1em;
     }
-  
-    .container-loginform .form-group input[type="submit"]:hover {
-      background-color: #696969;
+
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+        width: auto;
+        padding: 10px 18px;
+        background-color: #000000;
     }
-  
-    .container-loginform .form-group .error {
-      color: red;
-      font-size: 12px;
-      margin-top: 5px;
+
+    .cancelbtn:hover {
+        cursor: pointer;
+        /* background-color: #393838; */
     }
-  </style>
+
+    /* The Modal (background) */
+    .modal {
+        /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 100; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+        padding-top: 60px;
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+        border: 2px solid #888;
+        width: 95%; /* Could be more or less, depending on screen size */
+        height: auto;
+    }
+
+    /* Add Zoom Animation */
+    .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.6s;
+    }
+
+    @-webkit-keyframes animatezoom {
+        from {
+            -webkit-transform: scale(0);
+        }
+        to {
+            -webkit-transform: scale(1);
+        }
+    }
+
+    @keyframes animatezoom {
+        from {
+            transform: scale(0);
+        }
+        to {
+            transform: scale(1);
+        }
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+        span.psw {
+            display: block;
+            float: none;
+        }
+        .cancelbtn {
+            width: 100%;
+        }
+    }
+</style>
+
