--- a/components/src/pages/wallet.astro
+++ b/components/src/pages/wallet.astro
@@ -59,7 +59,7 @@ import RegistroTarjeta from "../components/forms/registroTarjeta.astro"
       margin: 20px auto;
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #4caf50;
+      background-color: #3E953D;
       color: white;
       border: none;
       border-radius: 4px;
