--- a/components/src/components/Servicios/Carrusell.astro
+++ b/components/src/components/Servicios/Carrusell.astro
@@ -76,10 +76,11 @@ productContainers.forEach((item, i) => {
   }
 
   .product-container {
-  padding: 0 10vw;
+  padding: 0 5vw;
   display: flex;
   overflow-x: auto;
   scroll-behavior: smooth;
+  justify-content: center;
   }
 
   .carrusell-product {
@@ -115,14 +116,14 @@ productContainers.forEach((item, i) => {
   .pre-btn,
 .nxt-btn {
   border: none;
-  width: 10vw;
+  width: 10vpc;
   height: 100%;
   position: absolute;
   top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #f4f4f4 100%);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
   cursor: pointer;
   z-index: 0.5;
 }
