--- a/components/src/pages/signup.astro
+++ b/components/src/pages/signup.astro
@@ -5,11 +5,11 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import TodosLosServicios from '../components/Servicios/TodosLosServicios.astro';
 import Filtro from '../components/market/filtro.astro'
 import Login from '../components/forms/login.astro';
+import RegisterProvider from '../components/forms/registerProvider.astro';
 const pageTitle = "Trabajos Que Ayudan";
 ---
 <BaseLayout pageTitle={pageTitle}>
-    <BarraNavegacion />
-    <Login/>
+    <RegisterProvider />
 </BaseLayout>
 <style>
     
