--- a/components/src/components/base/ModalNav.astro
+++ b/components/src/components/base/ModalNav.astro
@@ -1,4 +1,5 @@
 ---
+import MenuOptions from "./MenuOptions.astro";
 ---
 
 <div id="headerContainer">
@@ -15,16 +16,7 @@
 
         <div id="id01" style="display: none;" class="modal">
             <form class="modal-content animate" method="post">
-                <div class="Navcontainer">
-                    <nav>
-                        <ul id="mobileMenu">
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/servicios">Servicios</a></li>
-                            <li><a href="/signup">Ser proveedor y registrarse</a></li>
-                            <li><a href="/provider/perfil">cuenta y seguridad</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                <MenuOptions />
 
                 <a id="btn-login" > <p>Sign In</p></a>
                 <div class="containerLogin">
@@ -86,7 +78,6 @@
     #btn-icon {
         border-radius: 10%;
         width: auto;
-        
     }
     /* Full-width input fields */
     input[type="text"],
@@ -253,6 +244,11 @@
         .cancelbtn {
             width: 100%;
         }
+    }
+
+    @media screen and (min-width: 300px) {
+
+
     }
 </style>
 
