--- a/components/src/components/location/locationSmall.astro
+++ b/components/src/components/location/locationSmall.astro
@@ -28,9 +28,11 @@
     display: flex ;
     height: 2em;
     padding-top: 1em;
-    padding-bottom: 0.1em;
+    padding-bottom: 0.1rem;
     padding-left: 0.4em;
     padding-right: 0.4em;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     
 }
 
