--- a/components/src/Styles/global.css
+++ b/components/src/Styles/global.css
@@ -1,6 +1,5 @@
 header{
   color: #000000;
-  
 }
 
 .all-logo{
@@ -14,6 +13,15 @@ header{
 
 .logo-image{
   height: 5rem;
+}
+
+@media all and (max-width: 720px) {
+  .logo{
+    font-size: 2.5rem;
+  }
+  .logo-image{
+    height: 3rem;
+  }
 }
 
 h1 {
