--- a/components/src/components/informacion/hero.astro
+++ b/components/src/components/informacion/hero.astro
@@ -26,7 +26,7 @@
     .hero  .text h1{
   
       font-family: "inter";
-      font-size: 3rem;
+      font-size: 3.5rem !important;
       margin-top: 0;
     }
   }
