--- a/components/src/pages/anuncio.astro
+++ b/components/src/pages/anuncio.astro
@@ -1,5 +1,5 @@
 ---
-import CreaAnuncio from "../components/forms/creaAnuncio.astro";
+import CreateAnnouncement from "../components/forms/CreateAnnouncement.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 // const footer = false;
 const categories = ["Jardineria", "Comida", "Educacion", "Belleza", "Decoracion"];  
@@ -8,5 +8,5 @@ const categories = ["Jardineria", "Comida", "Educacion", "Belleza", "Decoracion"
     
 
     
-    <CreaAnuncio categories={categories}/>
+    <CreateAnnouncement categories={categories}/>
 </BaseLayout>
