--- a/components/src/components/forms/registerProvider copy.astro
+++ b/components/src/components/forms/registerProvider copy.astro
@@ -1,11 +1,29 @@
 ---
-import CirculBtnNext from "../base/CirculBtnNext.astro";
+
+
 ---
 
 
 <div class="container-loginform">
   <h2>Registrate!</h2>
   <form  method="POST" id="user-form">
+    <div class="form-group">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required />
+    </div>
+    <div class="form-group">
+      <label for="apellido">Apellidos:</label>
+      <input type="text" id="apellido" name="apellido" required />
+    </div>
+    <div class="form-group">
+      <label for="apellido">Cédula: (física o jurídica)</label>
+      <input type="text" id="apellido" name="apellido" required />
+    </div>
+    <div class="form-group">
+      <label for="telefono">Teléfono:</label>
+      <input type="tel" id="telefono" name="telefono" pattern="[0-9]{8}" required />
+      <small>Formato: 12345678</small>
+    </div>
     <div class="form-group">
       <label for="correo">Correo electrónico:</label>
       <input type="email" id="correo" name="correo" required />
@@ -19,10 +37,34 @@ import CirculBtnNext from "../base/CirculBtnNext.astro";
       <label for="confirmar-contrasena">Confirmar contraseña:</label>
       <input type="password" id="confirmar-contrasena" name="confirmar-contrasena" />
     </div>
-    <div class="nextBtn-register">
-      <CirculBtnNext />
+    
+    <div class="form-group">
+      <label for="provincia">Provincia:</label>
+      <select id="provincia" name="provincia" required>
+        <option value="" disabled selected>Seleccionar provincia</option>
+        <option value="san_jose">San José</option>
+        <option value="alajuela">Alajuela</option>
+        <option value="cartago">Cartago</option>
+        <option value="heredia">Heredia</option>
+        <option value="guanacaste">Guanacaste</option>
+        <option value="puntarenas">Puntarenas</option>
+        <option value="limon">Limón</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="distrito">Distrito:</label>
+      <input type="text" id="distrito" name="distrito" required />
+    </div>
+    <div class="form-group">
+      <label for="canton">Cantón:</label>
+      <input type="text" id="canton" name="canton" required />
+    </div>
+
+    <div class="form-group">
+      <input type="submit" value="Enviar" />
     </div>
   </form>
+ 
 </div>
 
 
@@ -31,15 +73,6 @@ import CirculBtnNext from "../base/CirculBtnNext.astro";
   body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-  }
-
-  .nextBtn-register{
-    display: flex;
-    justify-content: center;
-  }
-
-  #user-form{
-    margin-top: 1.5rem;
   }
 
   .container-loginform {
