--- a/components/src/components/base/SearchBar.astro
+++ b/components/src/components/base/SearchBar.astro
@@ -24,7 +24,7 @@
     transition: all 1s;
     z-index: 0.5;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-    // box-shadow: 0 0 25px 0 black;
+    box-shadow: 0 0 25px 0 black;
     &:hover {
       cursor: pointer;
     }
@@ -69,7 +69,7 @@
     height: 50px;
     outline: none;
     border: none;
-    // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     background: white;
     color: black;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -77,7 +77,7 @@
     border-radius: 30px;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1),
                 0 20px 25px 0 rgba(0, 0, 0, 0.1);
-    // box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
     transition: all 1s;
     opacity: 0;
     z-index: 5;
